--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Creative Design",
-  "name": "Creative design emotion detection app",
+  "name": "Creative design emotion detection app!",
   "icons": [
     {
       "src": "launcher-icon.png",
